fix: visibility of titles in about and contact pages

--- a/css/style.css
+++ b/css/style.css
@@ -714,7 +714,7 @@ main,
 }
 
 .sobre-mi-text {
-    color: #FFF8F1;
+    color: var(--color-text-principal);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -725,7 +725,7 @@ main,
     font-family: "Gloock", serif;
     font-weight: 400;
     font-style: normal;
-    color: #FFF8F1;
+    color: var(--color-text-principal);
 }
 
 .titol-sobre-mi {
